Fixed third buttons invisible

--- a/static/sass/_main-files/_base/page/_title-action-button.sass
+++ b/static/sass/_main-files/_base/page/_title-action-button.sass
@@ -10,6 +10,15 @@
 	line-height: 1.5 !important
 	margin: unset !important
 
+	background: $gray_50 !important
+
+	&:hover,
+	&:focus
+		background: $gray_60 !important
+
+	&:focus
+		@include btn_outline($gray_50, true)
+
 	&:nth-of-type(1)
 		background: $brand !important
 
@@ -19,16 +28,6 @@
 
 		&:focus
 			@include btn_outline($brand, true)
-
-	&:nth-of-type(2)
-		background: $gray_50 !important
-
-		&:hover,
-		&:focus
-			background: $gray_60 !important
-
-		&:focus
-			@include btn_outline($gray_50, true)
 
 	&:not(:last-of-type)
 		margin-left: 0.5rem !important
